# collapse-profiling

./: MIT_LICENSE.md  README.md  USAGE.md  config.yaml  parsers.py  pyproject.toml  run_demo.sh  structure_parser.py
collapse_profiling/: crude_parse_depth.py  drift_embedding.py  driver.py  entropy_detector.py  full_text.py  logprob_detector.py  normalize.py  parse_depth.py  parse_depth_ngram.py  parse_depth_streak.py  parse_freq.py  parsers.py  refusal.py  run_demo.sh  semantic_drift_detector.py  semantic_loop.py  structural_metrics.py  structure_parser.py
logs/: view_log.py
parse semantic drift detector/: semantic_drift_detector.py
parsers/: parse_depth_streak.py
parsers_utilities/: parse_depth_ngram.py  parse_depth_streak.py  semantic_drift_detector.py
prompts/: 1000_word_answer.txt  affirmation_first.txt  base64_payload.txt  base_adversarial.txt  code_comment_jail.txt  decoy_contradiction.txt  html_comment_trap.txt  json_key_injection.txt  length_overload.txt  length_prompt.txt  markdown_embed.txt  mixed_language.txt  nested_negations.txt  prime_control.txt  punctuation_dense.txt  punctuation_sparse.txt  recovery_seeded.txt  synonym_injection.txt  synonym_injector.txt  temperature_switch.txt  tool_call_stub.txt  unicode_confusables.txt  zero_width_space.txt
scripts/: stream_test.py  stream_testAFFIRMchatgpt4o.py  stream_testDECOY.py  stream_testLENGTH.py  stream_test_affirm.py  stream_test_base_gpt4o.py  stream_test_base_gpt4o_tempchange.py  stream_test_prime.py  stream_test_punctuation.py  stream_test_punctuation_gpt4o.py  stream_test_synonym.py
